# C-tuple-Library

./: CMakeLists.txt  readme.txt  tupleDriver.c  tupleExtendedDriver.c  tupleExtented.c  tupleExtented.h  tuple_t.c  tuple_t.h
